# system-monitor-backend

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  QUICKSTART.md  README.md  config.ini.example  docker-compose.yml  pyproject.toml  requirements.txt  schema.sql  setup.py  start.sh
.github/workflows/: ci.yml
system_monitor/: __init__.py  config.py  main.py  register.py
system_monitor/routers/: __init__.py
system_monitor/routers/cpu/: __init__.py  cpu.py
system_monitor/routers/disk/: __init__.py  disk.py
system_monitor/routers/memory/: __init__.py  memory.py
system_monitor/routers/network/: __init__.py  network.py
system_monitor/routers/process/: __init__.py  process.py
system_monitor/routers/sensors/: __init__.py  sensors.py
system_monitor/routers/system/: __init__.py  system.py
